--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "generator-basic-cpp",
+  "name": "generator-teplugin",
   "version": "1.0.0",
-  "description": "A basic C++ app generator.",
-  "homepage": "",
-  "author": {
-    "name": "John Thomas",
-    "email": "johnt67@gmail.com",
-    "url": ""
-  },
+  "description": "TerraLib Plugin generator",
+  "homepage": "http://www.dpi.inpe.br/terralib5",
   "files": [
     "generators"
   ],
   "main": "generators/index.js",
   "keywords": [
     "yeoman-generator",
-    "C++"
+    "C++",
+    "GIS-Tools",
+    "TerraView",
+    "TerraLib"
   ],
   "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-xo-space": "^0.16.0",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.1",
-    "mocha": "^3.4.2",
+    "mocha": "^3.5.3",
     "nsp": "^2.6.3",
-    "yeoman-assert": "^3.0.0",
-    "yeoman-test": "^1.6.0"
+    "yeoman-assert": "3.1.1",
+    "yeoman-test": "1.8.0"
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "yeoman-generator": "^1.1.1",
+    "yeoman-generator": "3.0.0",
     "yosay": "^2.0.0"
   },
   "jest": {
@@ -46,6 +44,6 @@
       "node": true
     }
   },
-  "repository": "jtshub/basic-cpp",
-  "license": "MIT"
+  "repository": "raphaelrpl/teplugin",
+  "license": "LGPL-3.0"
 }
